[package]
name = "makepad-robius-camera"
version = "0.1.0"
edition = "2021"
description = "Test app for robius-camera with Makepad"

[dependencies]
makepad-widgets = { git = "https://github.com/joulei/makepad", branch = "activity-callback-registry" }
robius-camera = { git = "https://github.com/project-robius/robius", branch = "camera" }
